# TiffWrapper

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
tiffwrapper/: __init__.py  flim.py  luts.py  msr.py  obf.py  save.py  utils.py
tiffwrapper/LUTs/: Blue Hot.lut  C3_circle_mgbm_67_c31_n256.lut  C3_circle_mgbm_67_c31_n256_s25.lut  C3_cyclic-protanopic-deuteranopic_bwyk_16-96_c31_n256.lut  C3_cyclic-protanopic-deuteranopic_wywb_55-96_c33_n256.lut  C3_cyclic-tritanopic_cwrk_40-100_c20_n256.lut  C3_cyclic-tritanopic_wrwc_70-100_c20_n256.lut  C3_cyclic_bgrmb_35-70_c75_n256.lut  C3_cyclic_bgrmb_35-70_c75_n256_s25.lut  C3_cyclic_grey_15-85_c0_n256.lut  C3_cyclic_grey_15-85_c0_n256_s25.lut  C3_cyclic_mrybm_35-75_c68_n256.lut  C3_cyclic_mrybm_35-75_c68_n256_s25.lut  C3_cyclic_mybm_20-100_c48_n256.lut  C3_cyclic_mybm_20-100_c48_n256_s25.lut  C3_cyclic_mygbm_30-95_c78_n256.lut  C3_cyclic_mygbm_30-95_c78_n256_s25.lut  C3_cyclic_mygbm_50-90_c46_n256.lut  C3_cyclic_mygbm_50-90_c46_n256_s25.lut  C3_cyclic_rygcbmr_50-90_c64_n256.lut  C3_cyclic_rygcbmr_50-90_c64_n256_s25.lut  C3_cyclic_wrkbw_10-90_c43_n256.lut  C3_cyclic_wrkbw_10-90_c43_n256_s25.lut  C3_cyclic_wrwbw_40-90_c42_n256.lut  C3_cyclic_wrwbw_40-90_c42_n256_s25.lut  C3_cyclic_ymcgy_60-90_c67_n256.lut  C3_cyclic_ymcgy_60-90_c67_n256_s25.lut  C3_diverging-isoluminant_cjm_75_c24_n256.lut  C3_diverging-isoluminant_cjo_70_c25_n256.lut  C3_diverging-linear-protanopic-deuteranopic_bjy_57-89_c34_n256.lut  C3_diverging-linear_bjr_30-55_c53_n256.lut  C3_diverging-protanopic-deuteranopic_bwy_60-95_c32_n256.lut  (+301 more)
(+1 files in other folders)
